# olw-protocol

./: .gitignore  CLAUDE.md  LICENSE  README.md
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  STACK.md
.planning/phases/02-harden-trust/: 02-PLAN.md
adapters/claude-mcp/: README.md  package.json  server.js
adapters/gpt/: functions.js  package.json
demo/: demo-output.txt  demo.py
docs/: litellm-routing-guide.md  publisher-guide.md
index/: index.js  package.json
index-server/: agents.json  akashic.js  crawl.mjs  index.js  mesh.html  monitor.sh  package-lock.json  package.json  plan.html  playwright.config.js  post.html  pull.js  reindex.mjs  seed-agents.mjs
index-server/playwright-report/: index.html
index-server/tests/: api.spec.js  backup-restore.sh  debug.spec.js  e2e-payment.mjs  register-ownership.mjs  ui.spec.js
olw-py/: README.md  pyproject.toml
olw-py/src/olw/: __init__.py
rsb/: rsb.py  test_rsb.py
sdk/python/: README.md  pyproject.toml
sdk/python/src/olw/: __init__.py
spec/: address-format.md  agent-json.md  akashic-adapter.md  akashic-field.md  akashic-grant.md  alignment-policy.md  fingerprint-schema.json
